...
            android:padding="10dp"
            android:src="@drawable/edit_svgrepo_com"
            app:strokeColor="@android:color/darker_gray"
            app:strokeWidth="1dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivDeleteTask"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="Delete Task"
            android:padding="10dp"
            android:src="@drawable/delete_2_svgrepo_com"
            app:strokeColor="@android:color/darker_gray"
...
